[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/enemies/bosses/esfera mago final.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/boss/boss_ball.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemies/mob/behavior/wait.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/attack.gd" type="Script" id=6]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=7]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_1/throw.gd" type="Script" id=8]
[ext_resource path="res://scripts/enemies/boss/behavior/is_attacking.gd" type="Script" id=9]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_1/throwable.gd" type="Script" id=10]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/takeDamage.gd" type="Script" id=11]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/hit.gd" type="Script" id=12]
[ext_resource path="res://scripts/enemies/boss/behavior/is_far_ini.gd" type="Script" id=13]
[ext_resource path="res://scripts/enemies/boss/behavior/go_to_ini.gd" type="Script" id=14]
[ext_resource path="res://scripts/enemies/boss/behavior/is_active.gd" type="Script" id=15]
[ext_resource path="res://scripts/enemies/mob/behavior/is_flying.gd" type="Script" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 53.8164

[sub_resource type="CircleShape2D" id=2]
radius = 36.522

[sub_resource type="Animation" id=3]
resource_name = "att_1"
length = 4.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.576456, -27.8162, -1000, -0.25, 0, 0.25, 0, 0, -0.259582, -107.316, 0.248157, 92.9749, 1000, -0.25, 0, 0.25, 0, 0, -0.584412, 105.3, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 2, 3.8, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 2, 3.8, 4 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.6, 1, 1.4, 1.8, 2.2, 2.6, 3, 3.4, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
}, {
"args": [  ],
"method": "att_one"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 3.8, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "att_2"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.7, 1.3, 1.9, 2.5, 3.1, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -800, 250 ), Vector2( 900, 300 ), Vector2( 200, 400 ), Vector2( -200, 300 ), Vector2( -500, 250 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1.1, 1.5, 2.3, 2.7, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "att_two"
}, {
"args": [ true ],
"method": "att_two"
}, {
"args": [ false ],
"method": "att_two"
}, {
"args": [ true ],
"method": "att_two"
}, {
"args": [ false ],
"method": "att_two"
}, {
"args": [ true ],
"method": "att_two"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5, 2.7, 2.9, 3.1, 3.3, 3.5, 3.7, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="space" type="Node2D"]

[node name="ball" type="RigidBody2D" parent="."]
collision_layer = 4
collision_mask = 5
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="hitbox" type="Area2D" parent="ball"]
visible = false
collision_layer = 0
collision_mask = 66
__meta__ = {
"_edit_lock_": true
}

[node name="shape" type="CollisionShape2D" parent="ball/hitbox"]
shape = SubResource( 1 )

[node name="hurtbox" type="CollisionShape2D" parent="ball"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ball"]
position = Vector2( 48.4455, 11.0452 )
scale = Vector2( 1.70521, 1.40497 )
z_index = -1
texture = ExtResource( 1 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="BehaviorTree" type="Node" parent="ball"]
script = ExtResource( 4 )

[node name="BehaviorSequence" type="Node" parent="ball/BehaviorTree"]
script = ExtResource( 7 )

[node name="is_active" type="Node" parent="ball/BehaviorTree/BehaviorSequence"]
script = ExtResource( 15 )

[node name="BehaviorSelector" type="Node" parent="ball/BehaviorTree/BehaviorSequence"]
script = ExtResource( 5 )

[node name="is_flying" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 16 )

[node name="BehaviorSequence3" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 7 )

[node name="throwable" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 10 )

[node name="throw" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 8 )

[node name="BehaviorSequence2" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 7 )

[node name="hit" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 12 )

[node name="takeDamage" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 11 )

[node name="BehaviorSequence" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 7 )

[node name="is_attacking" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 9 )

[node name="attack" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 6 )

[node name="BehaviorSequence4" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 7 )

[node name="is_far_ini" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence4"]
script = ExtResource( 13 )

[node name="go_to_ini" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence4"]
script = ExtResource( 14 )

[node name="wait" type="Node" parent="ball/BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 3 )

[node name="AttackTimer" type="Timer" parent="ball"]
wait_time = 6.0

[node name="attacks" type="AnimationPlayer" parent="ball"]
anims/att_1 = SubResource( 3 )
anims/att_2 = SubResource( 4 )

[connection signal="body_entered" from="ball" to="ball" method="_on_mob_body_entered"]
[connection signal="area_entered" from="ball/hitbox" to="ball" method="_on_hitbox_parry_entered"]
[connection signal="body_entered" from="ball/hitbox" to="ball" method="_on_hitbox_player_entered"]
[connection signal="timeout" from="ball/AttackTimer" to="ball" method="_on_AttackTimer_timeout"]
